--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "symfony/framework-bundle": "^4.0|^5.0",
         "symfony/twig-bundle": "^4.0|^5.0",
         "symfony/routing": "^4.0|^5.0",
-        "doctrine/orm": "^2.7"
+        "doctrine/orm": "^2.7|^3.0",
+        "symfony/form": "^4.0|^5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.4",
