--- a/composer.json
+++ b/composer.json
@@ -3,18 +3,19 @@
     "type": "library",
     "require": {
         "defuse/php-encryption": "^2.2",
-        "symfony/http-kernel": "^4.0|^5.0",
-        "symfony/dependency-injection": "^4.0|^5.0",
-        "symfony/config": "^4.0|^5.0",
-        "symfony/framework-bundle": "^4.0|^5.0",
-        "symfony/twig-bundle": "^4.0|^5.0",
-        "symfony/routing": "^4.0|^5.0",
+        "symfony/http-kernel": "^4.0|^5.0|^5.1",
+        "symfony/dependency-injection": "^4.0|^5.0|^5.1",
+        "symfony/config": "^4.0|^5.0|^5.1",
+        "symfony/framework-bundle": "^4.0|^5.0|^5.1",
+        "symfony/twig-bundle": "^4.0|^5.0|^5.1",
+        "symfony/routing": "^4.0|^5.0|^5.1",
         "doctrine/orm": "^2.7|^3.0",
-        "symfony/form": "^4.0|^5.0"
+        "symfony/form": "^4.0|^5.0|^5.1",
+        "symfony/mime": "^4.0|^5.0|^5.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.4",
-        "symfony/browser-kit": "^4.0|^5.0"
+        "symfony/browser-kit": "^4.0|^5.0|^5.1"
     },
     "autoload": {
         "psr-4": {
